option(ENABLE_ANALYSIS_TEST "Enable Analysis Tests" ON)

if (ENABLE_ANALYSIS_TEST)
    add_subdirectory(convolution)
    add_subdirectory(correlation)
    add_subdirectory(differentiation)
    add_subdirectory(fit)
    add_subdirectory(fourier)
    add_subdirectory(hilberttransform)
    add_subdirectory(integration)
    add_subdirectory(smooth)
endif()
