option(ENABLE_TEST_IMPORTEXPORT "Enable Import/Export Tests" ON)

IF (ENABLE_TEST_IMPORTEXPORT)

	option(ENABLE_TEST_IMPORTEXPORT_ASCII "Enable Ascii Tests" ON)
	IF (ENABLE_TEST_IMPORTEXPORT_ASCII)
		add_subdirectory(ASCII)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_BINARY "Enable Binary Tests" ON)
	IF (ENABLE_TEST_IMPORTEXPORT_BINARY)
		add_subdirectory(Binary)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_CAN "Enable CAN Bus related Tests" ON)
	IF (ENABLE_TEST_IMPORTEXPORT_CAN)
		add_subdirectory(CAN)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_CFITSIO "Enable CFitsio Tests" ON)
	IF (CFITSIO_FOUND AND ENABLE_TEST_IMPORTEXPORT_CFITSIO)
		add_subdirectory(FITS)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_DATASET "Enable Dataset Tests" ON)
	IF (ENABLE_TEST_IMPORTEXPORT_DATASET)
		add_subdirectory(Datasets)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_HDF5 "Enable HDF5 Tests" ON)
	IF (HDF5_FOUND AND ENABLE_TEST_IMPORTEXPORT_HDF5)
		add_subdirectory(HDF5)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_JSON "Enable Json Tests" ON)
	IF (ENABLE_TEST_IMPORTEXPORT_JSON)
		add_subdirectory(JSON)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_MATIO "Enable Matio Tests" ON)
	IF (MATIO_FOUND AND ENABLE_TEST_IMPORTEXPORT_MATIO)
		add_subdirectory(Matio)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_MCAP "Enable MCAP Tests" ON)
	IF (ENABLE_MCAP AND ENABLE_TEST_IMPORTEXPORT_MCAP)
		add_subdirectory(MCAP)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_MQTT "Enable MQTT Tests" ON)
	IF (Qt${QT_VERSION_MAJOR}Mqtt_FOUND AND ENABLE_TEST_IMPORTEXPORT_MQTT)
	add_subdirectory(MQTT)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_NETCDF "Enable Netcdf Tests" ON)
	IF (NETCDF_FOUND AND ENABLE_TEST_IMPORTEXPORT_NETCDF)
		add_subdirectory(NetCDF)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_ODS "Enable ODS Tests" ON)
	IF (ORCUS_FOUND AND ENABLE_TEST_IMPORTEXPORT_ODS)
		add_subdirectory(Ods)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_PROJECT "Enable Project import Tests" ON)
	if (ENABLE_TEST_IMPORTEXPORT_PROJECT)
		add_subdirectory(Project)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_SPICE "Enable Spice Tests" ON)
	if (ENABLE_TEST_IMPORTEXPORT_SPICE)
		add_subdirectory(Spice)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_SQL_DATABASE "Enable SQL Database Tests" ON)
	if (ENABLE_TEST_IMPORTEXPORT_SQL_DATABASE)
		add_subdirectory(SQL)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_READSTAT "Enable Readstat Tests" ON)
	IF ((READSTAT_FOUND OR BUILD_READSTAT) AND ENABLE_TEST_IMPORTEXPORT_READSTAT)
		add_subdirectory(ReadStat)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_ROOT "Enable Root Tests" ON)
	IF (ZLIB_FOUND AND LZ4_FOUND AND ENABLE_TEST_IMPORTEXPORT_ROOT)
		add_subdirectory(ROOT)
	ENDIF ()

	option(ENABLE_TEST_IMPORTEXPORT_XLSX "Enable XLSX Tests" ON)
	IF ((QXLSX_FOUND OR BUILD_QXLSX) AND ENABLE_TEST_IMPORTEXPORT_XLSX)
		add_subdirectory(XLSX)
	ENDIF ()

ENDIF ()
